[package]
name = "gdocs_tunnel"
version = "0.1.0"
edition = "2021"
description = "Encrypted SOCKS5 tunnel via Google Docs Viewer domain fronting - Censorship circumvention tool"
license = "MIT"

[[bin]]
name = "gdocs_tunnel"
path = "src/main.rs"

[[bin]]
name = "gdocs_server"
path = "src/bin/server.rs"

[dependencies]
# HTTP client with TLS (client)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip"] }
# HTTP server (server)
axum = "0.7"
# Async runtime - optimized
tokio = { version = "1", features = ["full", "parking_lot"] }
# Crypto - Noise protocol (NK pattern) + AES-GCM fallback
snow = "0.9"
aes-gcm = "0.10"
rand = "0.8"
# Encoding
base64 = "0.21"
# JSON - fast
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Regex for parsing Google response
regex = "1"
# CLI arguments
clap = { version = "4", features = ["derive", "env"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3           # Maximum speed optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Better optimization
strip = true            # Strip symbols
panic = "abort"         # Smaller/faster
target-cpu = "native"   # Optimize for current CPU

[profile.release-small]
inherits = "release"
opt-level = "z"         # Optimize for size
lto = true

# Build for multiple platforms:
# Native (fast): cargo build --release
# Windows:       cargo build --release --target x86_64-pc-windows-gnu
# Linux static:  cargo build --release --target x86_64-unknown-linux-musl
# Android:       cargo ndk -t arm64-v8a build --release
